[tool.poetry]
name = "bjira"
version = "0.9.3"
description = "hh jira helper"
authors = ["boksh <e.bokshitskiy@hh.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
keyring = "^23.7.0"
jira = "^3.3.0"
GitPython = "^3.1.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bjira = 'bjira.main:main'

[tool.black]
line-length = 120
