[tool.poetry]
name = "bjira"
version = "1.0.0"
description = "hh jira helper"
authors = ["boksh <e.bokshitskiy@hh.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
keyring = "^25.2.1"
jira = "^3.8.0"
GitPython = "^3.1.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bjira = 'bjira.main:main'

[tool.black]
line-length = 120
